<resources>
    <string name="app_name">Login</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_first_page">MessMister</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="title_activity_homepage">Home</string>
    <string name="closed">closed</string>
    <string name="open">open</string>
    <string name="gender">gender</string>
    <string name="groups">groups</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="member_heading">Members</string>
    <string name="staff_heading">Staff</string>
    <string name="bills_heading">Bills</string>
    <string name="balance_heading">Balance Sheet</string>
    <string name="help_heading">Help</string>
    <string name="about_heading">About</string>
    <string name="title_activity_members">Members</string>
    <string name="home">Home</string>
    <string name="title_activity_bills">Bills</string>
    <string name="title_activity_staff">Staff</string>
    <string name="title_activity_balance">Balance</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_create_member">Add New Member</string>
    <string name="title_activity_create_staff">CreateStaff</string>
    <string name="title_activity_create_bill">CreateBill</string>
    <string name="basicinfo">Basic</string>
    <string name="membershipinfo">Membership Info</string>
</resources>
